- Added various fixes and features from SpeedProg's fork. - Auto Scale is a new mode. Available in hold menu on comic view and settings. - Using SaveInstanceState so when coming back from comic view, how you left it will be restored. - Reset Progress now works for Series - Added "Mark as read" works for both comics and series. - Changed what is saved in the database of the page the user was on. I was using the index of the array which would cause the math to be a bit off. So Change it so the database always starts at 1, which makes the math easier and correct.